[gd_scene load_steps=32 format=3 uid="uid://c1ept6m5cciyo"]

[ext_resource type="PackedScene" uid="uid://cur3fdflca7s3" path="res://tscn/textbox/textbox.tscn" id="1_8utyh"]
[ext_resource type="Script" uid="uid://hlh7gdaebu7k" path="res://tscn/ShengKuo/sheng_kuo.gd" id="1_sj62w"]
[ext_resource type="Texture2D" uid="uid://d238igyc0c484" path="res://resource/images/S2 002.JPG" id="2_4e2d3"]
[ext_resource type="Texture2D" uid="uid://bq1wrvefl6ikt" path="res://resource/images/S2 001.JPG" id="3_4e2d3"]
[ext_resource type="Texture2D" uid="uid://qyxtiy7b45ee" path="res://resource/images/S2 bad.PNG" id="4_lblex"]
[ext_resource type="Texture2D" uid="uid://dfqbxedvt6rk5" path="res://resource/images/S2 DM.PNG" id="4_ohvi4"]
[ext_resource type="Texture2D" uid="uid://djpwgsm3s4kid" path="res://resource/images/S2 good.PNG" id="5_fngp0"]
[ext_resource type="Shader" uid="uid://c2dp24x5cwojn" path="res://tscn/shader/repair.gdshader" id="6_kqnrc"]
[ext_resource type="Texture2D" uid="uid://h2rjq2f3714s" path="res://resource/images/black.png" id="7_m83ng"]
[ext_resource type="Texture2D" uid="uid://dli3je7iobcxo" path="res://resource/images/S2 cao 1.PNG" id="9_m83ng"]
[ext_resource type="Texture2D" uid="uid://cr5br07cdt8gb" path="res://resource/images/S2 cao 3.PNG" id="10_1qpku"]
[ext_resource type="Texture2D" uid="uid://cg4v0wrqx2oda" path="res://resource/images/S2 G button.PNG" id="10_5gs4f"]
[ext_resource type="Texture2D" uid="uid://bt54g14u865mi" path="res://resource/images/S2 G head.PNG" id="11_kehj5"]
[ext_resource type="Texture2D" uid="uid://bvsdl1sgkx35a" path="res://resource/images/S2 cao 2.PNG" id="11_r2m8u"]
[ext_resource type="Texture2D" uid="uid://cpfwv7fehvctm" path="res://resource/images/S2 T up.png" id="12_kehj5"]
[ext_resource type="Texture2D" uid="uid://fc6txrirvo4r" path="res://resource/images/S2 T button.png" id="13_4b1rg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ohvi4"]
shader = ExtResource("6_kqnrc")
shader_parameter/lod = 1.028

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohvi4"]
size = Vector2(76.8858, 402.843)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tyw8b"]
size = Vector2(28.0384, 741.593)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gs4f"]
size = Vector2(554.963, 1319.97)

[sub_resource type="CircleShape2D" id="CircleShape2D_4b1rg"]
radius = 15.4213

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4b1rg"]
size = Vector2(2860, 130.417)

[sub_resource type="Gradient" id="Gradient_4b1rg"]
offsets = PackedFloat32Array(0.436667, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_to6pj"]
gradient = SubResource("Gradient_4b1rg")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="ImageTexture" id="ImageTexture_kehj5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kehj5"]
texture_margin_left = 32.0
texture_margin_right = 32.0
draw_center = false

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4b1rg"]
texture = ExtResource("12_kehj5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_to6pj"]
texture = ExtResource("12_kehj5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4b1rg"]

[sub_resource type="Theme" id="Theme_5gs4f"]
HScrollBar/icons/decrement = SubResource("ImageTexture_kehj5")
HScrollBar/icons/decrement_highlight = SubResource("ImageTexture_kehj5")
HScrollBar/icons/decrement_pressed = SubResource("ImageTexture_kehj5")
HScrollBar/icons/increment = SubResource("ImageTexture_kehj5")
HScrollBar/icons/increment_highlight = SubResource("ImageTexture_kehj5")
HScrollBar/icons/increment_pressed = SubResource("ImageTexture_kehj5")
HScrollBar/styles/grabber = SubResource("StyleBoxTexture_kehj5")
HScrollBar/styles/grabber_highlight = SubResource("StyleBoxTexture_4b1rg")
HScrollBar/styles/grabber_pressed = SubResource("StyleBoxTexture_to6pj")
HScrollBar/styles/scroll = SubResource("StyleBoxEmpty_4b1rg")

[sub_resource type="GDScript" id="GDScript_kehj5"]
script/source = "extends HScrollBar

@export var button : Sprite2D

func _ready() -> void:
	# 初始化值和按钮位置
	button.position = Vector2(34,31)
	value = 0

var is_end : bool = true

func _process(_delta: float) -> void:
	if is_end:
		button.position = Vector2(34,31) + Vector2(value/100*(977-34),0)
		script_text.fire_m.rotation_degrees = (value/100)*60
"

[node name="ShengKuo" type="Node2D" node_paths=PackedStringArray("textbox", "fire_cao_end", "la", "fire_timer_out_timer", "end_fire_timer", "choose_left", "choose_right", "choose", "after_choose", "gaoshi", "badgraless", "goodgraless", "bangzhi", "S2_head", "timer", "fire_timer", "fire_cao", "fire", "fire_mirror", "S2_fir_down", "bar")]
script = ExtResource("1_sj62w")
textbox = NodePath("Textbox")
fire_cao_end = NodePath("fire/S2Cao1")
la = NodePath("fire/Label")
fire_timer_out_timer = NodePath("fire/talk show")
end_fire_timer = NodePath("fire/Timer")
choose_left = NodePath("choose/true-left")
choose_right = NodePath("choose/false-right")
choose = NodePath("choose")
after_choose = NodePath("after choose")
gaoshi = NodePath("after choose/gaoshi")
badgraless = NodePath("after choose/S2Bad")
goodgraless = NodePath("after choose/S2Good")
bangzhi = NodePath("after choose/bangzhi")
S2_head = NodePath("fire/S2GHead")
timer = NodePath("choose/Timer")
fire_timer = NodePath("after choose/Timer")
fire_cao = NodePath("fire/S2Cao1")
fire = NodePath("fire")
fire_mirror = NodePath("fire/S2Good")
S2_fir_down = NodePath("fire/S2GButton")
bar = NodePath("fire/bar")

[node name="choose" type="Node2D" parent="."]

[node name="bk" type="Sprite2D" parent="choose"]
position = Vector2(749, 421)
scale = Vector2(0.58, 0.58)
texture = ExtResource("2_4e2d3")

[node name="true-left" type="TextureButton" parent="choose"]
offset_left = 363.0
offset_top = 186.0
offset_right = 575.0
offset_bottom = 545.0
metadata/_edit_use_anchors_ = true

[node name="false-right" type="TextureButton" parent="choose"]
offset_left = 587.0
offset_top = 149.0
offset_right = 759.0
offset_bottom = 486.0
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="choose"]
wait_time = 0.1
one_shot = true

[node name="after choose" type="Node2D" parent="."]

[node name="bk" type="Sprite2D" parent="after choose"]
position = Vector2(749, 421)
scale = Vector2(0.58, 0.58)
texture = ExtResource("3_4e2d3")

[node name="S2Cao1" type="Sprite2D" parent="after choose"]
position = Vector2(1019, 269)
rotation = -0.506145
scale = Vector2(0.47, 0.47)
texture = ExtResource("9_m83ng")

[node name="gaoshi" type="Sprite2D" parent="after choose"]
material = SubResource("ShaderMaterial_ohvi4")
position = Vector2(749, 453.5)
scale = Vector2(1.92057, 1.77656)
texture = ExtResource("7_m83ng")

[node name="S2Bad" type="Sprite2D" parent="after choose"]
position = Vector2(469, 364)
scale = Vector2(0.14, 0.14)
texture = ExtResource("4_lblex")

[node name="Area2D" type="Area2D" parent="after choose/S2Bad"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="after choose/S2Bad/Area2D"]
position = Vector2(64.2858, -250)
rotation = -0.750492
shape = SubResource("RectangleShape2D_ohvi4")

[node name="bangzhi" type="Sprite2D" parent="after choose"]
position = Vector2(1286, 377)
rotation = -0.486947
scale = Vector2(0.29, 0.29)
texture = ExtResource("4_ohvi4")

[node name="DM" type="Area2D" parent="after choose/bangzhi"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="after choose/bangzhi/DM"]
position = Vector2(-39.2131, -155.142)
rotation = -0.44855
shape = SubResource("RectangleShape2D_tyw8b")

[node name="HOLD" type="Area2D" parent="after choose/bangzhi"]
light_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="after choose/bangzhi/HOLD"]
position = Vector2(11.4746, -29.0407)
rotation = -0.539307
shape = SubResource("RectangleShape2D_5gs4f")

[node name="S2Good" type="Sprite2D" parent="after choose"]
visible = false
position = Vector2(510, 403)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_fngp0")

[node name="Timer" type="Timer" parent="after choose"]
wait_time = 0.1
one_shot = true

[node name="fire" type="Node2D" parent="."]
visible = false

[node name="bk" type="Sprite2D" parent="fire"]
position = Vector2(749, 421)
scale = Vector2(0.58, 0.58)
texture = ExtResource("3_4e2d3")

[node name="S2Cao1" type="Sprite2D" parent="fire"]
position = Vector2(729, 400)
rotation = -0.918043
scale = Vector2(0.29, 0.29)
texture = ExtResource("9_m83ng")

[node name="Area2D" type="Area2D" parent="fire/S2Cao1"]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire/S2Cao1/Area2D"]
position = Vector2(-3.05839, -32.3869)
shape = SubResource("CircleShape2D_4b1rg")

[node name="time 2" type="Sprite2D" parent="fire/S2Cao1"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("11_r2m8u")

[node name="time 3" type="Sprite2D" parent="fire/S2Cao1"]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.68, 0.68)
texture = ExtResource("10_1qpku")

[node name="S2GHead" type="Node2D" parent="fire"]
position = Vector2(474, 265)
scale = Vector2(0.15, 0.15)

[node name="Sprite2D" type="Sprite2D" parent="fire/S2GHead"]
position = Vector2(-113.333, -146.667)
scale = Vector2(1, 1)
texture = ExtResource("11_kehj5")

[node name="Area2D" type="Area2D" parent="fire/S2GHead"]
position = Vector2(0, -146.668)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="fire/S2GHead/Area2D"]
position = Vector2(1223.33, 0)
shape = SubResource("RectangleShape2D_4b1rg")

[node name="PointLight2D" type="PointLight2D" parent="fire/S2GHead/Area2D"]
position = Vector2(1840, -6.66663)
scale = Vector2(3, 3)
texture = SubResource("GradientTexture2D_to6pj")

[node name="S2GButton" type="Sprite2D" parent="fire"]
position = Vector2(480, 367)
scale = Vector2(0.22, 0.22)
texture = ExtResource("10_5gs4f")

[node name="bangzhi" type="Sprite2D" parent="fire"]
position = Vector2(1286, 377)
rotation = -0.486947
scale = Vector2(0.29, 0.29)
texture = ExtResource("4_ohvi4")

[node name="bar" type="Node2D" parent="fire"]
visible = false

[node name="S2TButton" type="Sprite2D" parent="fire/bar"]
position = Vector2(794, 615)
scale = Vector2(0.45, 0.45)
texture = ExtResource("13_4b1rg")

[node name="HScrollBar" type="HScrollBar" parent="fire/bar" node_paths=PackedStringArray("button")]
offset_left = 494.0
offset_top = 598.0
offset_right = 1504.0
offset_bottom = 661.0
scale = Vector2(0.6, 0.6)
theme = SubResource("Theme_5gs4f")
value = 50.0
script = SubResource("GDScript_kehj5")
button = NodePath("button")

[node name="button" type="Sprite2D" parent="fire/bar/HScrollBar"]
position = Vector2(977, 31.665)
scale = Vector2(0.065, 0.065)
texture = ExtResource("12_kehj5")

[node name="S2Good" type="Sprite2D" parent="fire"]
position = Vector2(510, 403)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_fngp0")

[node name="Timer" type="Timer" parent="fire"]
wait_time = 2.0
one_shot = true

[node name="Label" type="Label" parent="fire"]
visible = false
offset_left = 696.0
offset_top = 576.0
offset_right = 916.0
offset_bottom = 617.0
theme_override_font_sizes/font_size = 40
text = "25分钟后..."

[node name="talk show" type="Timer" parent="fire"]
one_shot = true

[node name="Textbox" parent="." instance=ExtResource("1_8utyh")]
visible = false
position = Vector2(697, 725)

[connection signal="pressed" from="choose/true-left" to="." method="_on_trueleft_pressed"]
[connection signal="pressed" from="choose/false-right" to="." method="_on_falseright_pressed"]
[connection signal="timeout" from="choose/Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="after choose/S2Bad/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="after choose/S2Bad/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="after choose/bangzhi/HOLD" to="." method="_on_hold_mouse_entered"]
[connection signal="mouse_exited" from="after choose/bangzhi/HOLD" to="." method="_on_hold_mouse_exited"]
[connection signal="timeout" from="after choose/Timer" to="." method="_begin_to_fire_timer"]
[connection signal="area_entered" from="fire/S2Cao1/Area2D" to="." method="_true_rora"]
[connection signal="timeout" from="fire/Timer" to="." method="_fire_timer_end"]
[connection signal="timeout" from="fire/talk show" to="." method="_fire_timer_out"]
